--- a/content/media/test/mochitest.ini
+++ b/content/media/test/mochitest.ini
@@ -447,6 +447,7 @@ skip-if = buildapp == 'b2g'
 [test_VideoPlaybackQuality.html]
 [test_VideoPlaybackQuality_disabled.html]
 [test_webvtt_disabled.html]
+[test_recorder_principals.html]
 
 # [test_audioDocumentTitle.html] # disabled - See bug 475110
 # [test_error_in_video_document.html] # disabled - See bug 608634
